# AzureKinectSample

./: LICENSE  README.md
sample/c/color/: CMakeLists.txt  kinect.cpp  kinect.hpp
sample/c/depth/: CMakeLists.txt  kinect.cpp  kinect.hpp
sample/c/index_map/: kinect.cpp  kinect.hpp
sample/c/infrared/: kinect.cpp  kinect.hpp  util.h
sample/c/playback/: CMakeLists.txt  kinect.cpp  kinect.hpp  main.cpp
sample/c/point_cloud/: CMakeLists.txt  kinect.cpp  kinect.hpp  main.cpp
sample/c/record/: CMakeLists.txt  kinect.cpp  kinect.hpp
sample/c/skeleton/: CMakeLists.txt  kinect.cpp  kinect.hpp
sample/c/transformation/: CMakeLists.txt  kinect.cpp  kinect.hpp
sample/cpp/color/: kinect.cpp  kinect.hpp
sample/cpp/depth/: kinect.cpp  kinect.hpp
sample/cpp/index_map/: CMakeLists.txt  kinect.cpp  kinect.hpp  main.cpp  util.h
sample/cpp/infrared/: CMakeLists.txt  kinect.cpp  kinect.hpp
sample/cpp/playback/: kinect.cpp  kinect.hpp  main.cpp
sample/cpp/point_cloud/: kinect.cpp  kinect.hpp
sample/cpp/record/: CMakeLists.txt  kinect.cpp  kinect.hpp  main.cpp
sample/cpp/skeleton/: kinect.cpp  kinect.hpp
sample/cpp/transformation/: kinect.cpp  kinect.hpp
sample/csharp/color/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
sample/csharp/depth/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
sample/csharp/index_map/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  index_map.csproj
sample/csharp/infrared/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  infrared.csproj
sample/csharp/skeleton/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  skeleton.csproj
sample/csharp/transformation/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  transformation.csproj
sample/python/: color.py  depth.py  infrared.py  point_cloud.py  requirements.txt  transformation.py
